# tokscale

./: .dockerignore  .gitignore  AGENTS.md  README.ja.md  README.ko.md  README.md  README.zh-cn.md  compose.yml
.github/workflows/: launcher_validation.yml  publish-cli.yml  test_coverage.yml
crates/tokscale-cli/src/: antigravity.rs  main.rs  warp.rs
crates/tokscale-cli/src/commands/: wrapped.rs
crates/tokscale-cli/src/commands/usage/: codex.rs  mod.rs  warp.rs
crates/tokscale-cli/src/tui/: app.rs  cache.rs  client_ui.rs  colors.rs  export.rs  mod.rs  settings.rs
crates/tokscale-cli/src/tui/data/: mod.rs
crates/tokscale-cli/src/tui/ui/: agents.rs  daily.rs  footer.rs  hourly.rs  hourly_profile.rs  mod.rs  models.rs  overview.rs  stats.rs  usage.rs  widgets.rs
crates/tokscale-cli/src/tui/ui/dialog/: source_picker.rs
crates/tokscale-cli/tests/: cli_tests.rs
crates/tokscale-core/: Cargo.toml
crates/tokscale-core/src/: aggregator.rs  clients.rs  lib.rs  message_cache.rs  sessionize.rs
crates/tokscale-core/src/pricing/: aliases.rs  lookup.rs
crates/tokscale-core/src/sessions/: amp.rs  antigravity.rs  claudecode.rs  codex.rs  copilot.rs  crush.rs  cursor.rs  droid.rs  gemini.rs  hermes.rs  kilo.rs  mod.rs  mux.rs  openclaw.rs  opencode.rs  roocode.rs  synthetic.rs  utils.rs  warp.rs
crates/tokscale-core/tests/: hermes.rs
scripts/: check-version-coherence.sh  cli.sh  prepare-release-provenance.sh  test-package-launchers.sh  test-prepare-release-provenance.sh
