[package]
name = "tokscale-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for tokscale - session parsing, scanning, aggregation, pricing"

[lib]
crate-type = ["rlib"]

[dependencies]
rayon = { workspace = true }
simd-json = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
libc = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
